[package]
name = "key_flow"
version = "0.1.1"
edition = "2024"

[dependencies]
winapi={ version = "0.3.9", features = ["winuser", "processthreadsapi", "errhandlingapi"] }
file_ref={ git="https://github.com/SuccessfullyFailed/file_ref", optional=true }
cachew={ git="https://github.com/SuccessfullyFailed/cachew", optional=true }
minifb={ version="0.28.0", optional=true }
rand={ version="0.9.0", optional=true }

[features]
default = ["humanlike"]
humanlike=["dep:file_ref", "dep:cachew", "dep:minifb", "dep:rand"]